--- a/mb/index.html
+++ b/mb/index.html
@@ -257,6 +257,14 @@
         <img src="img/payment-5.png">
         <img src="img/payment-6.png">
       </div>
+      <div class="ssl__flex  ssl__flex--mobile">
+        <img src="img/payment-1.png" width="138" height="43">
+        <img src="img/payment-2.png" style="width: 81px !important" width="81" height="37">
+        <img src="img/payment-3.png">
+        <img src="img/payment-4.png">
+        <img src="img/payment-5.png">
+        <img src="img/payment-6.png">
+      </div>
     </div>
   </section>
   <section class="comment">
@@ -359,7 +367,7 @@
           <a class="button  button--unclick" href="#">Открыть счет</a>
         </div>
       </div>
-      <a class="button  button--unclick" href="#">Подробнее о типах счетов</a>
+      <a class="button  button--unclick  button--type" href="#">Подробнее о типах счетов</a>
     </div>
   </section>
   <footer class="footer">
