--- a/borsa/accounts/segregated-account.html
+++ b/borsa/accounts/segregated-account.html
@@ -24,7 +24,7 @@
                       <li class="main-nav__item"><a href="trade-with-borsapro.html">Trade with BorsaPro</a></li>
                       <li class="main-nav__item"><a href="account-types.html">Account types</a></li>
                       <li class="main-nav__item"><a>Segregated account</a></li>
-                      <li class="main-nav__item"><a class="button--open">Open live account</a></li>
+                      <li class="main-nav__item"><a href="https://client.borsapro.com/register">Open live account</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
@@ -47,7 +47,7 @@
                 </li>
             </ul>
             <ul class="main-nav__user">
-              <li class="main-nav__item"><a class="button  button--header  button--green  button--open" href="#">Open account</a></li>
+              <li class="main-nav__item"><a class="button  button--header  button--green  button--open" href="https://client.borsapro.com/register">Open account</a></li>
               <li class="main-nav__item"><a class="button  button--header  button--gray  button-signin" href="#">Log In</a></li>
             </ul>
           </div>
@@ -181,6 +181,6 @@
     </div>
   </div>
   <script src="../js/mobile-menu.js"></script>
-  <script src="../js/popup.js"></script>
+  <!-- <script src="../js/popup.js"></script> -->
 </body>
 </html>
