--- a/borsa/index.html
+++ b/borsa/index.html
@@ -25,7 +25,7 @@
                       <li class="main-nav__item"><a href="accounts/trade-with-borsapro.html">Trade with BorsaPro</a></li>
                       <li class="main-nav__item"><a href="accounts/account-types.html">Account types</a></li>
                       <li class="main-nav__item"><a href="accounts/segregated-account.html">Segregated account</a></li>
-                      <li class="main-nav__item"><a class="button--open">Open live account</a></li>
+                      <li class="main-nav__item"><a href="https://client.borsapro.com/register">Open live account</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
@@ -48,8 +48,8 @@
                 </li>
             </ul>
             <ul class="main-nav__user">
-              <li class="main-nav__item"><a class="button  button--header  button--green  button--open" href="#">Open account</a></li>
-              <li class="main-nav__item"><a class="button  button--header  button--gray  button--signin" href="#">Log In</a></li>
+              <li class="main-nav__item"><a class="button  button--header  button--green  button--open" href="https://client.borsapro.com/register">Open account</a></li>
+              <li class="main-nav__item"><a class="button  button--header  button--gray  button--signin" href="https://client.borsapro.com/">Log In</a></li>
             </ul>
           </div>
           
@@ -66,7 +66,7 @@
       <div class="slider__container">
         <h2>Over 200 financial<br>instruments</h2>
         <div class="slider__link">
-          <a class="button  button--slider  button--green  button--open" href="#">Open account</a>
+          <a class="button  button--slider  button--green  button--open" href="https://client.borsapro.com/register">Open account</a>
           <a class="button  button--slider  button--unclick  button--free" href="#">Free demo</a>
         </div>
       </div>
@@ -75,7 +75,7 @@
       <div class="slider__container">
         <h2>Flexibility financial<br>leverage 1:1 to 1:300</h2>
         <div class="slider__link">
-          <a class="button  button--slider  button--green  button--open" href="#">Open account</a>
+          <a class="button  button--slider  button--green  button--open" href="https://client.borsapro.com/register">Open account</a>
           <a class="button  button--slider  button--unclick  button--free" href="#">Free demo</a>
         </div>
       </div>
@@ -84,7 +84,7 @@
       <div class="slider__container">
         <h2>Spread low fixed +</h2>
         <div class="slider__link">
-          <a class="button  button--slider  button--green  button--open" href="#">Open account</a>
+          <a class="button  button--slider  button--green  button--open" href="https://client.borsapro.com/register">Open account</a>
           <a class="button  button--slider  button--unclick  button--free" href="#">Free demo</a>
         </div>
       </div>
@@ -93,7 +93,7 @@
       <div class="slider__container">
         <h2>Immediate deposits &<br>withdrawals</h2>
         <div class="slider__link">
-          <a class="button  button--slider  button--green  button--open" href="#">Open account</a>
+          <a class="button  button--slider  button--green  button--open" href="https://client.borsapro.com/register">Open account</a>
           <a class="button  button--slider  button--unclick  button--free" href="#">Free demo</a>
         </div>
       </div>
@@ -102,7 +102,7 @@
       <div class="slider__container">
         <h2>Bonus deposit</h2>
         <div class="slider__link">
-          <a class="button  button--slider  button--green  button--open" href="#">Open account</a>
+          <a class="button  button--slider  button--green  button--open" href="https://client.borsapro.com/register">Open account</a>
           <a class="button  button--slider  button--unclick  button--free" href="#">Free demo</a>
         </div>
       </div>
@@ -641,6 +641,6 @@
   <script src="js/slick/slick.min.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/mobile-menu.js"></script>
-  <script src="js/popup.js"></script>
+  <!-- <script src="js/popup.js"></script> -->
 </body>
 </html>
