--- a/mb/training/assets.html
+++ b/mb/training/assets.html
@@ -92,7 +92,7 @@
     <div class="container">
       <ul>
         <li>Какие активы вас интерисуют?</li>
-        <li><a class="indicators__all" href="#">Все</a></li>
+        <li><a class="indicators__all  indicators__active" href="#">Все</a></li>
         <li><a class="indicators__currency" href="#">Валютные пары</a></li>
         <li><a class="indicators__stock" href="#">Акции</a></li>
         <li><a class="indicators__index" href="#">Индексы</a></li>
@@ -127,7 +127,7 @@
       </div>
     </header>
     <div class="container  container--big">
-      <div class="indicators__flex  indicators__flex--currency">
+      <div class="indicators__flex  indicators__flex--currency  indicators--close">
         <div class="indicators__box">
           <img src="../img/assets-bit.png" alt="">
           <div class="indicators__content">
@@ -233,7 +233,7 @@
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
-            <p>Тип: Осцилляторы <span></span></p>
+            <p>Тип: Акции <span></span></p>
             <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
@@ -243,7 +243,7 @@
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
-            <p>Тип: Осцилляторы <span></span></p>
+            <p>Тип: Акции <span></span></p>
             <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
@@ -253,7 +253,7 @@
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
-            <p>Тип: Осцилляторы <span></span></p>
+            <p>Тип: Акции <span></span></p>
             <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
@@ -263,7 +263,7 @@
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
-            <p>Тип: Осцилляторы <span></span></p>
+            <p>Тип: Акции <span></span></p>
             <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
@@ -275,7 +275,7 @@
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
-            <p>Тип: Осцилляторы <span></span></p>
+            <p>Тип: Акции <span></span></p>
             <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
@@ -285,7 +285,7 @@
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
-            <p>Тип: Осцилляторы <span></span></p>
+            <p>Тип: Акции <span></span></p>
             <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
@@ -295,7 +295,7 @@
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
-            <p>Тип: Осцилляторы <span></span></p>
+            <p>Тип: Акции <span></span></p>
             <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
@@ -305,7 +305,7 @@
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
-            <p>Тип: Осцилляторы <span></span></p>
+            <p>Тип: Акции <span></span></p>
             <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
@@ -483,7 +483,6 @@
   <script src="js/slick/slick.min.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/range.js"></script> -->
-  <!-- <script src="js/time.js"></script> -->
   <script src="../js/mobile-menu.js"></script>
   <script src="../js/filter-menu.js"></script>
 </body>
