--- a/borsa/accounts/account-types.html
+++ b/borsa/accounts/account-types.html
@@ -24,7 +24,7 @@
                       <li class="main-nav__item"><a href="trade-with-borsapro.html">Trade with BorsaPro</a></li>
                       <li class="main-nav__item"><a>Account types</a></li>
                       <li class="main-nav__item"><a href="segregated-account.html">Segregated account</a></li>
-                      <li class="main-nav__item"><a class="button--open">Open live account</a></li>
+                      <li class="main-nav__item"><a href="https://client.borsapro.com/register">Open live account</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
@@ -47,8 +47,8 @@
                 </li>
             </ul>
             <ul class="main-nav__user">
-              <li class="main-nav__item"><a class="button  button--header  button--green  button--open" href="#">Open account</a></li>
-              <li class="main-nav__item"><a class="button  button--header  button--gray  button--signin" href="#">Log In</a></li>
+              <li class="main-nav__item"><a class="button  button--header  button--green  button--open" href="https://client.borsapro.com/register">Open account</a></li>
+              <li class="main-nav__item"><a class="button  button--header  button--gray  button--signin" href="https://client.borsapro.com/">Log In</a></li>
             </ul>
           </div>
           
@@ -74,19 +74,19 @@
             <b>Mini</b>
             <p>Basic Exchange For<br>Beginners</p>
             <b>$500</b>
-            <a class="button  button--open" href="">Open account</a>
+            <a class="button  button--open" href="https://client.borsapro.com/register">Open account</a>
           </th>
           <th>
             <b>Classic</b>
             <p>For Skilled<br>Investors</p>
             <b>$5 000</b>
-            <a class="button  button--open" href="">Open account</a>
+            <a class="button  button--open" href="https://client.borsapro.com/register">Open account</a>
           </th>
           <th>
             <b>Premium</b>
             <p>Advanced Transaction<br>For Experienced Investors</p>
             <b>$20 000</b>
-            <a class="button  button--open" href="">Open account</a>
+            <a class="button  button--open" href="https://client.borsapro.com/register">Open account</a>
           </th>
         </tr>
         <tr>
@@ -260,6 +260,6 @@
     </div>
   </div>
   <script src="../js/mobile-menu.js"></script>
-  <script src="../js/popup.js"></script>
+  <!-- <script src="../js/popup.js"></script> -->
 </body>
 </html>
