--- a/borsa/tools/account-funding.html
+++ b/borsa/tools/account-funding.html
@@ -24,7 +24,7 @@
                       <li class="main-nav__item"><a href="../accounts/trade-with-borsapro.html">Trade with BorsaPro</a></li>
                       <li class="main-nav__item"><a href="../accounts/account-types.html">Account types</a></li>
                       <li class="main-nav__item"><a href="../accounts/segregated-account.html">Segregated account</a></li>
-                      <li class="main-nav__item"><a class="button--open">Open live account</a></li>
+                      <li class="main-nav__item"><a href="https://client.borsapro.com/register">Open live account</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
@@ -47,8 +47,8 @@
                 </li>
             </ul>
             <ul class="main-nav__user">
-              <li class="main-nav__item"><a class="button  button--header  button--green  button--open" href="#">Open account</a></li>
-              <li class="main-nav__item"><a class="button  button--header  button--gray  button--signin" href="#">Log In</a></li>
+              <li class="main-nav__item"><a class="button  button--header  button--green  button--open" href="https://client.borsapro.com/register">Open account</a></li>
+              <li class="main-nav__item"><a class="button  button--header  button--gray  button--signin" href="https://client.borsapro.com/">Log In</a></li>
             </ul>
           </div>
           
@@ -194,6 +194,6 @@
     </div>
   </div>
   <script src="../js/mobile-menu.js"></script>
-  <script src="../js/popup.js"></script>
+  <!-- <script src="../js/popup.js"></script> -->
 </body>
 </html>
