mobile in webtrader

--- a/forexglobal/trading/platforms/webtrader.html
+++ b/forexglobal/trading/platforms/webtrader.html
@@ -105,9 +105,44 @@
           </div>
         </div>
       </div>
+      <hr>
+      <div class="webtrader__flex  webtrader__flex--list">
+        <div class="webtrader__mockup"></div>
+        <div class="webtrader__list">
+          <b>Key features included:</b>
+          <ul>
+            <li>Works with any browser</li>
+            <li>No downloads, Flash  or Java required</li>
+            <li>You will keep your MT4 login and password</li>
+            <li>Trade directly from the chart</li>
+            <li>Multi-language support</li>
+            <li>View aggregated positions</li>
+            <li>Advanced "Close All" functionality</li>
+            <li>Real-time quotes and execution</li>
+            <li>Fully synchronized with MT4</li>
+            <li>Dynamic order routing</li>
+          </ul>
+        </div>
+      </div>
+      <hr>
+      <div class="webtrader__try">
+        <div class="container">
+          <h2>Try It Now</h2>
+          <div class="webtrader__links">
+            <a class="webtrader__real" href="#">
+              Real account<br>
+              <span>start live trading</span>
+            </a>
+            <a class="webtrader__demo" href="#">
+              Demo account<br>
+              <span>start praccticing for free</span>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
-  <section class="payment">
+  <section class="payment  payment--inner">
     <div class="container">
       <div class="payment__flex">
         <div class="payment__box  payment__box--mc"></div>
