--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -83,15 +83,15 @@
     <div class="container">
       <div class="edge__flex">
         <div class="edge__box">
-          <b>70</b>
-          <p>currency pairs,<br>indices &<br>commodities</p>
+          <b>170+</b>
+          <p>currency pairs, Indices,<br>commodities, metals & Equities</p>
         </div>
         <div class="edge__box">
-          <b>0.0</b>
+          <b>0.4</b>
           <p>spreads<br>from</p>
         </div>
         <div class="edge__box">
-          <b>500:1</b>
+          <b>1:400</b>
           <p>leverage<br>up to</p>
         </div>
         <div class="edge__box">
@@ -99,12 +99,12 @@
           <p>minimum<br>deposit</p>
         </div>
         <div class="edge__box">
-          <b>$0</b>
-          <p>account<br>fees</p>
+          <b>6</b>
+          <p>asset<br>classes</p>
         </div>
         <div class="edge__box">
-          <b>15</b>
-          <p>Trading<br>Platforms</p>
+          <b>0</b>
+          <p>zero deposit<br>fees</p>
         </div>
       </div>
     </div>
@@ -116,13 +116,14 @@
         <div class="account__box">
           <h2>Zulutrade</h2>
             <hr>
-          <b>Sosial trading platform</b>
+          <b>Advanced Platform</b>
           <ul>
-            <li>$1,000,000 Free Demo Account</li>
-            <li>Step-by-step tutorials & articles</li>
-            <li>Online webinars & local seminars</li>
-            <li>One-to-one support in 16 languages</li>
-            <li>Your own Account Manager</li>
+            <li>Free Demo Accounts</li>
+            <li>EUR, GBP and USD Deposit Currencies</li>
+            <li>Leverage up to 1:400</li>
+            <li>ZuluGuard Protection</li>
+            <li>Automator Trading Rules</li>
+            <li>Desktop Widget</li>
           </ul>
           <a href="#">Create account</a>
         </div>
@@ -131,12 +132,13 @@
             <hr>
           <b>Start live trading</b>
           <ul>
-            <li>Tight spreads from 0 pips*</li>
-            <li>Up to 1:1000 leverage* *</li>
-            <li>Superfast trade execution</li>
-            <li>Hi-tech Forex trading tools</li>
-            <li>Ultimate risk protection & security</li>
-            <li>* depending on account type</li>
+            <li>Tight spreads from 0.04 pips</li>
+            <li>Up to 1:400 leverage* </li>
+            <li>170+ CFDs</li>
+            <li>Algorithmic Trading allowed </li>
+            <li>Hedging allowed</li>
+            <li>Multi-platforms</li>
+            <li>Fast Deposits and withdrawals</li>
           </ul>
           <a href="#">Create account</a>
         </div>
@@ -145,11 +147,12 @@
             <hr>
           <b>Start practicing for free</b>
           <ul>
-            <li>No hidden fees</li>
-            <li>Low minimum deposit</li>
-            <li>Full control of your Investment Account</li>
-            <li>Quick deposits and withdrawals</li>
-            <li>Simple, flexible and secure</li>
+            <li>Risk Free Account</li>
+            <li>No initial deposit</li>
+            <li>Fast Registration</li>
+            <li>Live quotes</li>
+            <li>Multiplatforms </li>
+            <li>No strategy Limitations</li>
           </ul>
           <a href="#">Create account</a>
         </div>
