--- a/mb/index.html
+++ b/mb/index.html
@@ -43,8 +43,8 @@
             <img src="img/logo.png" alt="MasterBinary">
           </picture>
           <ul class="nav__list  nav__list--main">
-            <li><a class="button  button--blue" href="#">Вход</a></li>
-            <li><a class="button  button--blue" href="#">Регистрация</a></li>
+            <li><a class="button  button--blue  button__login" href="#">Вход</a></li>
+            <li><a class="button  button--blue  button__register" href="#">Регистрация</a></li>
           </ul>
           <div class="nav__register  nav__register--closed">
             <ul class="nav__choise">
