add mobile version on one page

--- a/forexglobal/trading/platforms/webtrader.html
+++ b/forexglobal/trading/platforms/webtrader.html
@@ -65,41 +65,41 @@
       <p class="webtrader__text">Our webtrader has been built with one purpose in mind and that’s to improve the trading experience of our clients. Combine MT4 and our Webtrader under one trading account so you can keep all the powerful features that our MT4 infrastructure offers, but increase your platform’s capabilities when you’re not at your own trading desk or on the go. Our Webtrader uses all the advantage of the brand new infrastructure for MT4 and gives you flexibility and choice.</p>
       <div class="webtrader__img">
         <div class="webtrader__flex">
-          <div class="webtrader__box">
+          <div class="webtrader__box  webtrader__box--right">
             <b>1</b>
             <p>You can filter instruments using keyword or securities group or set your own asset classes.</p>
           </div>
-          <div class="webtrader__box">
+          <div class="webtrader__box  webtrader__box--left">
             <b>4</b>
             <p>Excellent  HTML5 charting which includes five chart types, vector drawings, and 100+ studies.</p>
           </div>
         </div>
         <div class="webtrader__flex">
-          <div class="webtrader__box">
+          <div class="webtrader__box  webtrader__box--right">
             <b>2</b>
             <p>By just optimizing the smart one-click trading mode, traders can set size, TP/SL, and also open orders with exceptional speed.</p>
           </div>
-          <div class="webtrader__box">
+          <div class="webtrader__box  webtrader__box--left">
             <b>5</b>
             <p>Keep your eyes on the market trend and your open positions at the same time! Open and close trades directly from the chart.</p>
           </div>
         </div>
         <div class="webtrader__flex">
-          <div class="webtrader__box">
+          <div class="webtrader__box  webtrader__box--right">
             <b>3</b>
             <p>You can choose any instrument by clicking on the star: view them easily by selecting instruments group “Favorite”</p>
           </div>
-          <div class="webtrader__box">
+          <div class="webtrader__box  webtrader__box--left">
             <b>6</b>
             <p>ChartDock gives traders the ability to analyze up to 10 charts simultaneously. Charts can either be manually arranged or automatically arranged at the click of a button.</p>
           </div>
         </div>
         <div class="webtrader__flex  webtrader__flex--down">
-          <div class="webtrader__box">
+          <div class="webtrader__box  webtrader__box--up">
             <b>3</b>
             <p>You can choose any instrument by clicking on the star: view them easily by selecting instruments group “Favorite”</p>
           </div>
-          <div class="webtrader__box">
+          <div class="webtrader__box  webtrader__box--up">
             <b>6</b>
             <p>ChartDock gives traders the ability to analyze up to 10 charts simultaneously. Charts can either be manually arranged or automatically arranged at the click of a button.</p>
           </div>
