--- a/forexglobal/trading/account-types.html
+++ b/forexglobal/trading/account-types.html
@@ -4,26 +4,26 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>WebTrader - Forex24 Global</title>
-  <link rel="stylesheet" href="../../css/style.min.css">
+  <title>Account Types - Forex24 Global</title>
+  <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../../img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="../../img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../../img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="../../img/favicon/safari-pinned-tab.svg" color="#2f2861">
-  <link rel="manifest" href="../../site.webmanifest">
-  <meta name="msapplication-config" content="../../browserconfig.xml">
-  <meta name="msapplication-TileImage" content="../../img/favicon/mstile-144x144.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#2f2861">
+  <link rel="manifest" href="../site.webmanifest">
+  <meta name="msapplication-config" content="../browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
   <meta name="theme-color" content="#5a21ed">
 </head>
 <body>
   <header class="header--inner  header--scroll">
     <div class="header__container">
       <div class="header__flex">
-        <a class="header__logo" href="../../index.html">
-          <img src="../../img/logo.svg" alt="Forex24 Global">
+        <a class="header__logo" href="../index.html">
+          <img src="../img/logo.svg" alt="Forex24 Global">
         </a>
         <button class="header__toggle">Open Menu</button>
         <ul class="header__user  header__user--closed">
@@ -58,90 +58,7 @@
       </nav>
     </div>
   </header>
-  <section class="webtrader">
-    <div class="container">
-      <h1 class="webtrader__name">Webtrader platform</h1>
-      <p class="webtrader__text">Forex24 Global is providing a new web based trading platform that runs on both PC and Mac. This platform, which can be accessed using clients’ existing mt4 logins, broadens our reach and addresses some ongoing needs of our clients who require a stable and flexible trading solution to access global forex markets.</p>
-      <p class="webtrader__text">Our webtrader has been built with one purpose in mind and that’s to improve the trading experience of our clients. Combine MT4 and our Webtrader under one trading account so you can keep all the powerful features that our MT4 infrastructure offers, but increase your platform’s capabilities when you’re not at your own trading desk or on the go. Our Webtrader uses all the advantage of the brand new infrastructure for MT4 and gives you flexibility and choice.</p>
-      <div class="webtrader__img">
-        <div class="webtrader__flex">
-          <div class="webtrader__box  webtrader__box--right">
-            <b>1</b>
-            <p>You can filter instruments using keyword or securities group or set your own asset classes.</p>
-          </div>
-          <div class="webtrader__box  webtrader__box--left">
-            <b>4</b>
-            <p>Excellent  HTML5 charting which includes five chart types, vector drawings, and 100+ studies.</p>
-          </div>
-        </div>
-        <div class="webtrader__flex">
-          <div class="webtrader__box  webtrader__box--right">
-            <b>2</b>
-            <p>By just optimizing the smart one-click trading mode, traders can set size, TP/SL, and also open orders with exceptional speed.</p>
-          </div>
-          <div class="webtrader__box  webtrader__box--left">
-            <b>5</b>
-            <p>Keep your eyes on the market trend and your open positions at the same time! Open and close trades directly from the chart.</p>
-          </div>
-        </div>
-        <div class="webtrader__flex">
-          <div class="webtrader__box  webtrader__box--right">
-            <b>3</b>
-            <p>You can choose any instrument by clicking on the star: view them easily by selecting instruments group “Favorite”</p>
-          </div>
-          <div class="webtrader__box  webtrader__box--left">
-            <b>6</b>
-            <p>ChartDock gives traders the ability to analyze up to 10 charts simultaneously. Charts can either be manually arranged or automatically arranged at the click of a button.</p>
-          </div>
-        </div>
-        <div class="webtrader__flex  webtrader__flex--down">
-          <div class="webtrader__box  webtrader__box--up">
-            <b>3</b>
-            <p>You can choose any instrument by clicking on the star: view them easily by selecting instruments group “Favorite”</p>
-          </div>
-          <div class="webtrader__box  webtrader__box--up">
-            <b>6</b>
-            <p>ChartDock gives traders the ability to analyze up to 10 charts simultaneously. Charts can either be manually arranged or automatically arranged at the click of a button.</p>
-          </div>
-        </div>
-      </div>
-      <hr>
-      <div class="webtrader__flex  webtrader__flex--list">
-        <div class="webtrader__mockup"></div>
-        <div class="webtrader__list">
-          <b>Key features included:</b>
-          <ul>
-            <li>Works with any browser</li>
-            <li>No downloads, Flash  or Java required</li>
-            <li>You will keep your MT4 login and password</li>
-            <li>Trade directly from the chart</li>
-            <li>Multi-language support</li>
-            <li>View aggregated positions</li>
-            <li>Advanced "Close All" functionality</li>
-            <li>Real-time quotes and execution</li>
-            <li>Fully synchronized with MT4</li>
-            <li>Dynamic order routing</li>
-          </ul>
-        </div>
-      </div>
-      <hr>
-      <div class="webtrader__try">
-        <div class="container">
-          <h2>Try It Now</h2>
-          <div class="webtrader__links">
-            <a class="webtrader__real" href="#">
-              Real account<br>
-              <span>start live trading</span>
-            </a>
-            <a class="webtrader__demo" href="#">
-              Demo account<br>
-              <span>start praccticing for free</span>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  
   <section class="payment  payment--inner">
     <div class="container">
       <div class="payment__flex">
@@ -158,7 +75,7 @@
       <div class="footer__flex">
         <ul class="footer__ul">
           <li>
-            <img class="footer__logo" src="../../img/logo-w.svg" alt="Forex24 Global">
+            <img class="footer__logo" src="../img/logo-w.svg" alt="Forex24 Global">
           </li>
           <li>
             <a class="footer__callme" href="#">Call us</a>
@@ -215,6 +132,6 @@
       <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
-  <script src="../../js/main.min.js" async></script>
+  <script src="../js/main.min.js" async></script>
 </body>
 </html>
