--- a/forexglobal/trading/account-types.html
+++ b/forexglobal/trading/account-types.html
@@ -58,7 +58,111 @@
       </nav>
     </div>
   </header>
-  
+  <section class="account-types">
+    <div class="container">
+      <h1 class="account-types__name">Account types</h1>
+      <p class="account-types__text">We present our customers with an account selection that can satisfy each trader’s needs and preferences. Our team has thought about even the smallest of details and produced different account types so you can select the one that best suits your needs. There are different accounts to choose from and each one has its benefits.</p>
+      <div class="account-types__flex">
+        <div class="account-types__box  account-types__box--mini">
+          <h2>Mini</h2>
+          <p>Basic Trading For Beginners</p>
+          <b>$500</b>
+          <hr>
+          <ul>
+            <li>Min First Deposit: <span>$/£/€/100</span></li>
+            <li>Account Currency: <span>USD/EUR/GBP</span></li>
+            <li>Default Leverage: <span>1:50</span></li>
+            <li>Maximum Leverage: <span>1:50</span></li>
+            <li>Margin Call Level: <span>75%</span></li>
+            <li>Stop Out Level: <span>50%</span></li>
+            <li>Standard Lot Size on Forex, Indices & Commodities CFDs: <span>Min 0.01 – Max 500</span></li>
+            <li>Standard Lot Size on Stocks: <span>Min 1 – Max 1000</span></li>
+            <li>Online Chat Support</li>
+            <li>Platforms: <span>Forex24 MT4 Desktop, Forex24 WebTrader & Mobile</span></li>
+            <li>Instruments: <span>CFDs on Forex, Commodities, Indices, Metals, Energies & Stocks</span></li>
+            <li>Free E-book</li>
+            <li>Competitive Spreads Only – No Commissions</li>
+            <li>Access to Breaking News & Market Research</li>
+            <li>Account Executive Team Available 24/5</li>
+          </ul>
+          <a href="#">Create account</a>
+        </div>
+        <div class="account-types__box  account-types__box--silver">
+          <h2>Classic Silver</h2>
+          <p>Trading For Experienced Investors</p>
+          <b>$500</b>
+          <hr>
+          <ul>
+            <li>Min First Deposit: <span>$/£/€/500</span></li>
+            <li>Account Currency: <span>USD/EUR/GBP</span></li>
+            <li>Default Leverage: <span>1:50</span></li>
+            <li>Maximum Leverage: <span>1:400</span></li>
+            <li>Margin Call Level: <span>75%</span></li>
+            <li>Stop Out Level: <span>50%</span></li>
+            <li>Standard Lot Size on Forex, Indices & Commodities CFDs: <span>Min 0.01 – Max 500</span></li>
+            <li>Standard Lot Size on Stocks: <span>Min 1 – Max 1000</span></li>
+            <li>Online Chat Support</li>
+            <li>Platforms: <span>Forex24 MT4 Desktop, Forex24 WebTrader & Mobile</span></li>
+            <li>Instruments: <span>CFDs on Forex, Commodities, Indices, Metals, Energies & Stocks</span></li>
+            <li>Free E-book</li>
+            <li>Low Spreads & Commission</li>
+            <li>Access to Breaking News & Market Research</li>
+            <li>Account Executive Team Available 24/5</li>
+          </ul>
+          <a href="#">Create account</a>
+        </div>
+        <div class="account-types__box  account-types__box--gold">
+          <h2>Premium Gold</h2>
+          <p>Advanced Trading For Serious Investors</p>
+          <b>$500</b>
+          <hr>
+          <ul>
+            <li>Min First Deposit: <span>$/£/€/1,000</span></li>
+            <li>Account Currency: <span>USD/EUR/GBP</span></li>
+            <li>Online Chat Support</li>
+            <li>Platforms: <span>Forex24 MT4 Desktop, Forex24 WebTrader & Mobile</span></li>
+            <li>Default Leverage: <span>1:50</span></li>
+            <li>Maximum Leverage: <span>1:200</span></li>
+            <li>Margin Call Level: <span>75%</span></li>
+            <li>Stop Out Level: <span>50%</span></li>
+            <li>Standard Lot Size on Forex, Indices & Commodities CFDs: <span>Min 0.01 – Max 500</span></li>
+            <li>Standard Lot Size on Stocks: <span>Min 1 – Max 1000</span></li>
+            <li>Instruments: <span>CFDs on Forex, Commodities, Indices, Metals, Energies & Stocks</span></li>
+            <li>Free E-book</li>
+            <li>Extremely Low Spread & Commission</li>
+            <li>Access to Breaking News & Market Research</li>
+            <li>Account Executive Team Available 24/5</li>
+          </ul>
+          <a href="#">Create account</a>
+        </div>
+        <div class="account-types__box  account-types__box--zulu">
+          <h2>ZuluTrade</h2>
+          <p>Social & Copytrading</p>
+          <b>$500</b>
+          <hr>
+          <ul>
+            <li>Min First Deposit: <span>$/£/€/100</span></li>
+            <li>Account Currency: <span>EUSD/EUR/GBP</span></li>
+            <li>Platforms: <span>Desktop & Mobile</span></li>
+            <li>Default Leverage: <span>1:50</span></li>
+            <li>Maximum Leverage: <span>1:400</span></li>
+            <li>Margin Call Level: <span>75%</span></li>
+            <li>Stop Out Level: <span>50%</span></li>
+            <li>Standard Lot Size on Forex, Indices & Commodities CFDs: <span>Min 0.01 – Max 500</span></li>
+            <li>Online Chat Support</li>
+            <li>Instruments: <span>CFDs on Forex, Commodities, Indices, Metals</span></li>
+            <li>Free E-book</li>
+            <li>Low Spreads & Commission</li>
+            <li>Access to Breaking News & Market Research</li>
+            <li>Account Executive Team</li>
+            <li>Available 24/5</li>
+          </ul>
+          <a href="#">Create account</a>
+        </div>
+      </div>
+      <p class="account-types__risk">Trading involves risk of loss</p>
+    </div>
+  </section>
   <section class="payment  payment--inner">
     <div class="container">
       <div class="payment__flex">
